# gmail-unsubscriber

./: .gitignore  README.md  pyproject.toml
gmail_unsubscriber/: login_form.ui  main.py  unsubscriber_form.ui
